jomon-dev/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jomon-backend
spec:
  template:
    spec:
      containers:
        - name: jomon-backend
          image: ghcr.io/traptitech/jomon-v2:latest@sha256:064046378e376b933db38cb19dd9d4b3eed6e7fd5e23495ccf57dd3a6bdf25da
