jomon-dev/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jomon-dev-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jomon-dev-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jomon-dev-backend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1

      containers:
        - name: jomon-dev-backend
          image: ghcr.io/traptitech/jomon-v2:latest@sha256:f6afdb4cdb8e76aec582d67bff83db03c3a3bbaa6b33a5b8a61739a53feb5cf7
          imagePullPolicy: Always
          ports:
            - containerPort: 1323
              name: http
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
