jomon-dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jomon-dev-frontend
  labels:
    app.kubernetes.io/name: jomon-dev-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jomon-dev-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jomon-dev-frontend
    spec:
      containers:
        - name: jomon-dev-frontend
          image: ghcr.io/traptitech/jomon-ui:main@sha256:1279db13ee5d4faf14d73c2c0692ecab3c6e2469a06e9888b9cb8c281ac510fe
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
