jomon-dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jomon-dev-frontend
spec:
  selector:
    app.kubernetes.io/name: jomon-dev-frontend
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
