jomon-dev/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jomon-dev
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jomon-dev.trapti.tech`) && PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - name: jomon-dev-backend
          port: 80
    - match: Host(`jomon-dev.trapti.tech`)
      kind: Rule
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - name: jomon-dev-frontend
          port: 80
  tls:
    secretName: jomon-dev-tls
